<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login_image"
        android:fitsSystemWindows="true"
        android:paddingBottom="80dp"
        android:shadowColor="@color/black"
        tools:context=".presentation.login.LoginActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:src="@drawable/ic_logo_combine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_app_description_title"
            style="@style/title.large.white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="37dp"
            android:text="@string/app_description_title"
            app:layout_constraintBottom_toTopOf="@id/tv_app_description"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_app_description"
            style="@style/description.large.bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="23dp"
            android:text="@string/app_description"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="@+id/tv_app_description_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/button.social_login"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:backgroundTint="@color/primary"
            android:text="@string/social_login"
            app:icon="@android:drawable/ic_menu_search"
            app:iconGravity="start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>