<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.register.music.upload.MusicUploadFragment">

        <LinearLayout
            android:id="@+id/ll_album_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical"
            android:paddingHorizontal="5dp"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/et_album_title"
                style="@style/title.small"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:autofillHints="@null"
                android:background="@android:color/transparent"
                android:hint="@string/input_title"
                android:inputType="textMultiLine|textNoSuggestions"
                android:maxLines="1"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:text="@={viewModel.title}"
                android:textColorHint="@color/gray40" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_magnifier"
                app:dividerColor="@color/gray40"
                app:tint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingHorizontal="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_album_title">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner"
                style="@style/title.small"
                android:layout_width="130dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:textColorHint="@color/gray" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_magnifier"
                app:dividerColor="@color/gray40" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_upload_music"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="30dp"
            android:background="@color/primary"
            android:tint="@color/white"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            app:contentPadding="10dp"
            app:layout_constraintTop_toBottomOf="@id/ll_spinner">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="@null"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:hint="@string/input_lyrics"
                android:inputType="text"
                android:textAppearance="@style/description.small" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_register"
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:layout_marginBottom="50dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/primary"
            app:cardCornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register"
                android:textAppearance="@style/button.bold" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>