<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.capstone.artwhale.presentation.home.UserViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.home.profile.ProfileFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fcv_profile">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_new_list"
                    style="@style/title.small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/like_album"
                    android:visibility="@{viewModel.likeAlbum.isEmpty() ? View.GONE : View.VISIBLE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_all_album"
                    style="@style/description.medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{(view) -> viewModel.onClickButton(view)}"
                    android:text="@string/all_list"
                    android:visibility="@{viewModel.likeAlbum.isEmpty() ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBottom_toBottomOf="@id/tv_new_list"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_new_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:visibility="@{viewModel.likeAlbum.isEmpty() ? View.GONE : View.VISIBLE}"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_new_list"
                    app:spanCount="3"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_album" />

                <TextView
                    android:id="@+id/tv_chart"
                    style="@style/title.small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="22dp"
                    android:text="@string/like_music"
                    android:visibility="@{viewModel.likeMusic.isEmpty() ? View.GONE : View.VISIBLE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_new_list" />

                <TextView
                    android:id="@+id/tv_all_music"
                    style="@style/description.medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{(view) -> viewModel.onClickButton(view)}"
                    android:text="@string/all_list"
                    android:visibility="@{viewModel.likeMusic.isEmpty() ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBottom_toBottomOf="@id/tv_chart"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_chart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:orientation="vertical"
                    android:visibility="@{viewModel.likeMusic.isEmpty() ? View.GONE : View.VISIBLE}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_chart"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_chart_music" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_empty"
            android:textAppearance="@style/description.veryLarge"
            android:visibility="@{viewModel.likeMusic.isEmpty() &amp; viewModel.likeAlbum.isEmpty()? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fcv_profile" />

        <ImageView
            android:id="@+id/iv_blur"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/fcv_profile" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fcv_profile"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@drawable/bg_bottom_right_round"
            android:elevation="50dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navGraph="@navigation/nav_profile_graph" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>